--- a/src/Styles/Login.module.css
+++ b/src/Styles/Login.module.css
@@ -63,6 +63,25 @@
     transition: background-color 0.3s ease;
 }
 
+.texto{
+    font-family: sans-serif;
+    font-size: 16px;
+}
+
+.a{
+    text-decoration: none;
+    color: #618cad;
+    font-size: 1rem;
+    margin-top: 20px;
+    display: inline-block;
+    transition: 0.3s ease;
+}
+
+.a:hover {
+    text-decoration: underline;
+    color: #005fa3;
+}
+
 .button:hover {
     background-color: #005fa3;
 }
