--- a/src/Styles/NavBar.module.css
+++ b/src/Styles/NavBar.module.css
@@ -18,7 +18,7 @@ border-radius: 50%;
 .title {
 flex-grow: 1;
 text-align: center;
-font-size: 1.5rem;
+font-size: 3rem;
 color: white;
 font-weight: bold;
 font-family: sans-serif;
@@ -43,7 +43,7 @@ margin: 3px 0;
 .menu {
 display: none;
 flex-direction: column;
-position: absolute;
+position: static;
 top: 100%;
 right: 0;
 background-color: #2979ff;
@@ -61,6 +61,8 @@ transition: background 0.2s;
 font-family: sans-serif;
 }
 
+
+
 .menu a:hover {
 background-color: #1c5ed6;
 }
@@ -70,17 +72,16 @@ display: flex;
 }
 
 /* Desktop view */
-@media (min-width: 768px) {
+@media (max-width: 768px) {
+    .menu {
+        width: 100%;
+        position: static;
+        flex-direction: column;
+        gap: 20px;
+        padding: 0;
+    }
 
-.menu {
-    width: 100%;
-    position: static;
-    flex-direction: column;
-    gap: 20px;
-    padding: 0;
-}
-
-.title {
-    font-size: 1.5rem;
-}
+    .title {
+        font-size: 1.5rem;
+    }
 }
