--- a/src/Styles/NavBar.module.css
+++ b/src/Styles/NavBar.module.css
@@ -9,10 +9,20 @@ flex-wrap: wrap;
 }
 
 .logo {
-width: 80px;
-height: 80px;
-background-color: white;
-border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    overflow: hidden;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #2979ff;
+}
+
+.logoImg{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .title {
