--- a/src/Styles/NavBar.module.css
+++ b/src/Styles/NavBar.module.css
@@ -3,7 +3,7 @@ display: flex;
 align-items: center;
 justify-content: space-between;
 background-color: #2979ff;
-padding: 10px 20px;
+padding: 10px 30px;
 position: relative;
 flex-wrap: wrap;
 }
@@ -28,6 +28,7 @@ flex-wrap: wrap;
 .title {
 flex-grow: 1;
 text-align: center;
+margin-left: -100px;
 font-size: 3rem;
 color: white;
 font-weight: bold;
@@ -92,6 +93,6 @@ display: flex;
     }
 
     .title {
-        font-size: 1.5rem;
+        font-size: 2.5rem;
     }
 }
