Agrego unos cambios en la barra de busqueda agregando un icono de lucide

--- a/src/Styles/BarraBusqueda.module.css
+++ b/src/Styles/BarraBusqueda.module.css
@@ -21,6 +21,12 @@
     min-width: 120px;
 }
 
+.IconoCalendario{
+    display: flex; 
+    align-items: center;
+    gap: 0.5rem
+}
+
 .filter {
     border: none;
     padding: 15px 30px;
