--- a/src/Styles/CartaEvento.module.css
+++ b/src/Styles/CartaEvento.module.css
@@ -1,5 +1,5 @@
 .tarjeta {
-    background-color: white;
+    background-color: rgb(245, 245, 245);
     border-radius: 16px;
     width: 100%;
     max-width: 400px;
@@ -11,6 +11,7 @@
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     margin-left: auto;
     margin-right: auto;
+    height: 400px;
 }
 
 .tarjeta:hover {
