--- a/src/Styles/SignUp.module.css
+++ b/src/Styles/SignUp.module.css
@@ -37,6 +37,13 @@
     padding: 0.7rem;
     border-radius: 5px;
     border: 1px solid #ccc;
+
+}
+
+.form input:focus {
+    outline: none;
+    border: 1px solid rgb(12, 181, 12);
+    background-color: #ffffff;
 }
 
 .form button {
