--- a/src/Styles/SignUp.module.css
+++ b/src/Styles/SignUp.module.css
@@ -78,6 +78,15 @@
     font-size: 1.8rem;
 }
 
+.error {
+    color: red;
+    font-size: 0.8rem;
+    text-align: left;
+    margin-top: -0.5rem;
+    margin-bottom: 0.5rem;
+    font-family: sans-serif;
+}
+
 
 @media(max-width: 768px) {
     .container {
