--- a/src/Styles/ListaEventos.module.css
+++ b/src/Styles/ListaEventos.module.css
@@ -5,3 +5,9 @@
     padding: 1rem; 
     justify-items: center;
 }
+
+.mensaje{
+    text-align: center;
+    font-size: 1.5rem;
+    color: #333;
+}
