--- a/src/Styles/SignUp.module.css
+++ b/src/Styles/SignUp.module.css
@@ -11,7 +11,7 @@
     font-family: sans-serif;
     background-color: #e7e7e7;
     border-radius: 15px;
-    padding: 3rem;
+    padding: 1rem 2rem 2rem 2rem;
     width: 100%;
     max-width: 400px;
     box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
